--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,26 @@
     <script src="{{ url_for('static', filename='popper.min.js') }}"></script>
     <script src="{{ url_for('static', filename='bootstrap.min.js') }}"></script>
     <script>
+            
+        
+        function getCookie(name) {
+            var value = "; " + document.cookie;
+            var parts = value.split("; " + name + "=");
+            if (parts.length == 2) {
+                return parts.pop().split(";").shift();
+            } else {
+                return "search"; // Default to "search" if the cookie is not found
+            }
+        }
+            function setModeCookie() {
+            var mode = document.getElementById('modeToggle').checked ? 'add' : 'search';
+            document.cookie = "mode=" + mode + "; path=/";
+            console.log('mode set to '+mode)
+        }
+            
             $(document).ready(function() {
+
+
         // Handle tab clicks
         $('.nav-link').on('click', function(event) {
             event.preventDefault(); // Prevent default link behavior
@@ -60,9 +79,32 @@
         $.get('/home', function(data) {
             $('#home').html(data);
         });
+
+
         $('#home').addClass('show active');
     });
     </script>
+       <style>
+        /*Styles for home topbar section*/
+        .topbar {
+            display: flex;
+            align-items: center;
+            padding: 10px;
+            background-color: #f8f9fa;
+            margin-bottom: 20px; /* Add some space between topbar and the table */
+        }
+        .topbar .form-row {
+            display: flex;
+            width: 100%;
+        }
+        .topbar .form-row .col {
+            flex: 1;
+            margin-right: 10px;
+        }
+        .topbar .form-row .col:last-child {
+            margin-right: 0;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
