--- a/templates/login.html
+++ b/templates/login.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <script src="{{ url_for('static', filename='jquery-3.5.1.min.js') }}"></script>
     <link rel="stylesheet" href="{{ url_for('static', filename='/bootstrap.min.css') }}">
+    <script src="{{ url_for('static', filename='/bootstrap.min.js') }}"></script>
 </head>
 <body>
     <div class="container">
@@ -26,6 +28,6 @@
             </div>
         </div>
     </div>
-    <script src="{{ url_for('static', filename='/bootstrap.min.js') }}"></script>
+
 </body>
 </html>
