--- a/templates/register.html
+++ b/templates/register.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
+    <script src="{{ url_for('static', filename='jquery-3.5.1.min.js') }}"></script>
     <link rel="stylesheet" href="{{ url_for('static', filename='/bootstrap.min.css') }}">
-
+    <script src="{{ url_for('static', filename='/bootstrap.min.js') }}"></script>
     <style>
         .back-to-login {
             position: absolute;
@@ -24,6 +25,13 @@
         <div class="row justify-content-center">
             <div class="col-md-4">
                 <h2 class="text-center">Register</h2>
+                {% with messages = get_flashed_messages() %}
+                  {% if messages %}
+                    <div class="alert alert-danger" role="alert">
+                      {{ messages[0] }}
+                    </div>
+                  {% endif %}
+                {% endwith %}
                 <form method="post" action="{{ url_for('register') }}">
                     <div class="form-group">
                         <label for="username">Username</label>
